...
              },
            ),
            const SizedBox(height: 20),
            _buildTextField(
              _vehicleNumberController,
              localizations.vehicleNumberPlate,
              key: const Key('vehicleField'),
            ),
            const SizedBox(height: 20),
            ValueListenableBuilder<DateTime?>(
              valueListenable: _selectedDate,
              builder: (context, date, _) {
                return _buildDatePicker(date, localizations);
...
